<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MovieDetailsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <ImageView
            android:id="@+id/background_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background_orig"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/background_mask_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background_mask"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/image_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="59dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_back" />

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="59dp"
            android:background="#00FFFFFF"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_back"
            android:textColor="@color/btn_back_grey"
            android:textSize="@dimen/btn_back_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/image_button_back"
            app:layout_constraintStart_toEndOf="@+id/image_button_back"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/name_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="254dp" />

        <TextView
            android:id="@+id/pg_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/roboto"
            android:text="@string/pg_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/name_guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_black"
            android:letterSpacing="-0.01"
            android:lineHeight="40dp"
            android:maxLines="2"
            android:minLines="2"
            android:text="@string/name_text"
            android:textColor="#ECECEC"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/name_guideline" />

        <TextView
            android:id="@+id/tag_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.01"
            android:lineHeight="20dp"
            android:text="@string/tag_text"
            android:textColor="#FF3466"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_text_view" />

        <ImageView
            android:id="@+id/star1_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tag_text_view"
            tools:ignore="ContentDescription"
            tools:src="@drawable/red_star_icon" />

        <ImageView
            android:id="@+id/star2_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/star1_image_view"
            app:layout_constraintStart_toEndOf="@+id/star1_image_view"
            app:layout_constraintTop_toBottomOf="@+id/tag_text_view"
            tools:ignore="ContentDescription"
            tools:src="@drawable/red_star_icon" />

        <ImageView
            android:id="@+id/star3_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/star2_image_view"
            app:layout_constraintStart_toEndOf="@+id/star2_image_view"
            app:layout_constraintTop_toBottomOf="@+id/tag_text_view"
            tools:ignore="ContentDescription"
            tools:src="@drawable/red_star_icon" />

        <ImageView
            android:id="@+id/star4_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/star3_image_view"
            app:layout_constraintStart_toEndOf="@+id/star3_image_view"
            app:layout_constraintTop_toBottomOf="@+id/tag_text_view"
            tools:ignore="ContentDescription"
            tools:src="@drawable/red_star_icon" />

        <ImageView
            android:id="@+id/star5_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/star4_image_view"
            app:layout_constraintStart_toEndOf="@+id/star4_image_view"
            app:layout_constraintTop_toBottomOf="@+id/tag_text_view"
            tools:ignore="ContentDescription"
            tools:src="@drawable/grey_star_icon" />

        <TextView
            android:id="@+id/rating_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8.89dp"
            android:fontFamily="@font/roboto_black"
            android:lineHeight="20dp"
            android:text="@string/rating_text"
            android:textAllCaps="true"
            android:textColor="#6D6D80"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/star5_image_view"
            app:layout_constraintStart_toEndOf="@+id/star5_image_view"
            app:layout_constraintTop_toTopOf="@+id/star5_image_view" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/storyline_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="406dp" />

        <TextView
            android:id="@+id/storyline_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_black"
            android:lineHeight="20dp"
            android:text="@string/storyline_name_text"
            android:textColor="#ECECEC"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/storyline_guideline" />

        <TextView
            android:id="@+id/storyline_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:lineHeight="20dp"
            android:text="@string/storyline_text"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline_name_text_view" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/movie_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="585dp" />

        <TextView
            android:id="@+id/movie_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/roboto_black"
            android:lineHeight="20dp"
            android:text="@string/cast_name_text"
            android:textColor="#ECECEC"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/movie_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/movie1_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/movie2_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_guideline"
            tools:ignore="ContentDescription"
            tools:src="@drawable/movie1" />

        <ImageView
            android:id="@+id/movie2_image_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/movie3_image_view"
            app:layout_constraintStart_toEndOf="@id/movie1_image_view"
            app:layout_constraintTop_toBottomOf="@+id/movie_guideline"
            tools:ignore="ContentDescription"
            tools:src="@drawable/movie2" />

        <ImageView
            android:id="@+id/movie3_image_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/movie4_image_view"
            app:layout_constraintStart_toEndOf="@id/movie2_image_view"
            app:layout_constraintTop_toBottomOf="@+id/movie_guideline"
            tools:ignore="ContentDescription"
            tools:src="@drawable/movie3" />

        <ImageView
            android:id="@+id/movie4_image_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie3_image_view"
            app:layout_constraintTop_toBottomOf="@+id/movie_guideline"
            tools:ignore="ContentDescription"
            tools:src="@drawable/movie4" />

        <TextView
            android:id="@+id/movie1_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/roboto_black"
            android:lineHeight="16dp"
            android:minLines="2"
            android:text="@string/movie1_text"
            android:textColor="#D8D8D8"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/movie1_image_view"
            app:layout_constraintStart_toStartOf="@id/movie1_image_view"
            app:layout_constraintTop_toBottomOf="@+id/movie1_image_view" />

        <TextView
            android:id="@+id/movie2_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/roboto_black"
            android:lineHeight="16dp"
            android:minLines="2"
            android:text="@string/movie2_text"
            android:textColor="#D8D8D8"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/movie2_image_view"
            app:layout_constraintStart_toStartOf="@id/movie2_image_view"
            app:layout_constraintTop_toBottomOf="@+id/movie2_image_view" />

        <TextView
            android:id="@+id/movie3_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/roboto_black"
            android:lineHeight="16dp"
            android:minLines="2"
            android:text="@string/movie3_text"
            android:textColor="#D8D8D8"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/movie3_image_view"
            app:layout_constraintStart_toStartOf="@id/movie3_image_view"
            app:layout_constraintTop_toBottomOf="@+id/movie3_image_view" />

        <TextView
            android:id="@+id/movie4_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/roboto_black"
            android:lineHeight="16dp"
            android:minLines="2"
            android:text="@string/movie4_text"
            android:textColor="#D8D8D8"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/movie4_image_view"
            app:layout_constraintStart_toStartOf="@id/movie4_image_view"
            app:layout_constraintTop_toBottomOf="@+id/movie4_image_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>